# pySIPFENN

./: .gitattributes  .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE.md  MANIFEST.in  README.md  models.json  pyproject.toml  pysipfenn.py
.github/workflows/: benchmarks.yaml  benchmarks.yml  coreTests.yaml  coreTests_LinuxUbuntu.yaml  coreTests_MacIntel.yaml  coreTests_MacM1.yaml  coreTests_Windows.yaml  fullTest.yaml  fullTest.yml  partialTest.yml  publishPyPI.yaml  python-package.yml  weeklyTesting.yaml  weeklyTesting.yml
descriptorDefinitions/: KS2022.py  KS2022_dilute.py  Magpie_element_properties.csv  Magpie_property_names.txt  Ward2017.py
docs/: changelog.rst  conf.py  contributing.md  docs_requirements.txt  exportingmodels.md  faq.md  index.rst  install.md  miscellaneousnotes.md
docs/_build/: .buildinfo  changelog.html  faq.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: changelog.doctree  environment.pickle  faq.doctree  index.doctree  install.doctree
docs/_build/.doctrees/examples/: sipfenn_examples.doctree
docs/_build/.doctrees/jupyter_execute/examples/: sipfenn_examples.doctree
docs/_build/.doctrees/source/: modules.doctree  pysipfenn.core.doctree  pysipfenn.descriptorDefinitions.doctree  pysipfenn.doctree  pysipfenn.modelsSIPFENN.doctree
docs/_build/_sources/: faq.md.txt
docs/_build/_sources/examples/: sipfenn_examples.ipynb.txt
docs/_build/_sources/jupyter_execute/examples/: sipfenn_examples.ipynb.txt
docs/_build/_sources/source/: pysipfenn.descriptorDefinitions.rst.txt
docs/_build/doctrees/: README.doctree  api.doctree  environment.pickle  index.doctree
docs/_build/doctrees/source/: modules.doctree  pysipfenn.core.doctree  pysipfenn.descriptorDefinitions.doctree  pysipfenn.doctree  pysipfenn.tests.doctree
docs/_build/examples/: sipfenn_examples.html
docs/_build/html/: .buildinfo  README.html  api.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: api.rst.txt  install.md.txt
docs/_build/html/_sources/source/: pysipfenn.rst.txt
docs/_build/html/source/: modules.html  pysipfenn.core.html  pysipfenn.descriptorDefinitions.html  pysipfenn.html  pysipfenn.modelsSIPFENN.html  pysipfenn.tests.html
docs/_build/jupyter_execute/examples/: sipfenn_examples.html
docs/_build/jupyter_execute/jupyter_execute/examples/: sipfenn_examples.html
docs/_build/source/: modules.html  pysipfenn.core.html  pysipfenn.descriptorDefinitions.html  pysipfenn.html  pysipfenn.modelsSIPFENN.html
docs/examples/: sipfenn_examples.ipynb
docs/source/: modules.rst  pysipfenn.core.rst  pysipfenn.descriptorDefinitions.rst  pysipfenn.modelsSIPFENN.rst  pysipfenn.rst  pysipfenn.tests.rst
example.workshop2023Feb/: README.md  sipfenn_examples.ipynb  sipfenn_examples_clean.ipynb
pysipfenn/: __init__.py
pysipfenn/core/: modelAdjusters.py  modelExporters.py  pysipfenn.py
pysipfenn/descriptorDefinitions/: KS2022.py  KS2022_dilute.py  KS2022_randomSolutions.py  README.md  Ward2017.py  labels_KS2022_dilute.csv  labels_Ward2017.csv
pysipfenn/misc/: conveniences.py  prototypeLibrary.yaml
pysipfenn/modelsSIPFENN/: README.md  models.json
pysipfenn/tests/: test_AllCompatibleONNX_Ward2017.py  test_Core_prototypeLibrary.py  test_KS2022.py  test_KS2022_dilute.py  test_KS2022_randomSolution.py  test_KS2022_randomSolutions.py  test_Krajewski2020_NN9NN20NN24_ONNX.py  test_ModelAdjusters.py  test_ModelExporters.py  test_Ward2017.py  test_conveniences.py  test_customModel.py  test_pysipfenn.py
pysipfenn/tests/testCaseFiles/: AdjusterTestDescriptors.csv  AdjusterTestDescriptors.npy  AdjusterTestTargets.csv  AdjusterTestTargets.npy  TestFile_DescriptorData_4_KS2022_labeled_enumerated.csv  TestFile_DescriptorData_4_KS2022_labeled_named.csv  TestFile_DescriptorData_KS2022_randomSolution_valueRangesMeans.csv  exampleInputFilesDescriptorTable.csv  prototypeLibrary-custom.yaml
pysipfenn/tests/testCaseFiles/exampleInputFiles/: 0-Cr8Fe18Ni4.POSCAR  1-Cr16Fe8Ni6.POSCAR  12-Gd4Cr4O12.POSCAR  13-Fe16Ni14.POSCAR  15-Ta4Tl4O12.POSCAR  16-Fe18Ni12.POSCAR  17-Pr4Ga4O12.POSCAR  19-Fe4Ni26.POSCAR  2-Fe8Ni22.POSCAR  21-Fe10Ni20.POSCAR  22-Fe10Ni20.POSCAR  23-Fe12Ni18.POSCAR  24-Fe16Ni14.POSCAR  26-Fe8Ni22.POSCAR  27-Cr28Fe2.POSCAR  29-Fe12Ni18.POSCAR  30-Cr26Fe4.POSCAR  4-Fe30.POSCAR
pysipfenn/tests/testCaseFiles/exampleInputFiles_500atom/: 1-Zr220Cu280.POSCAR
tests/: test_KS2022.py  test_Ward2017.py
tests/testCaseFiles/exampleInputFiles/: 10-Ce4Ti4O12.POSCAR  11-Fe10Ni20.POSCAR  14-Fe24Ni6.POSCAR  18-Fe28Ni2.POSCAR  20-Fe8Ni22.POSCAR  25-Fe12Ni18.POSCAR  28-Fe26Ni4.POSCAR  3-Cr18Fe12.POSCAR  32-Zr220Cu280.POSCAR  34-Li24Al4Ni32.POSCAR  5-Cr22Fe8.POSCAR  6-Fe2Ni28.POSCAR  7-Cr18Fe12.POSCAR  8-Cr2Fe16Ni12.POSCAR  9-Pb8O12.POSCAR
tests/testCaseFiles/exampleInputFiles_500atom/: 3-Zr220Cu280.POSCAR
(+1 files in other folders)
