[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pysipfenn"
version = "0.11.0post1"
authors = [
  { name="Adam Krajewski", email="ak@psu.edu" },
    { name="Jonathan Siegel", email="jwsiegel@tamu.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
description = "Easily extensible Python package for running Structure-Informed Prediction of Formation Energy using Neural Networks (SIPFENN)"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "pymatgen>=2022.1.9",
    "torch>=1.11.0",
    "onnx2torch>=1.5.2",
    "onnx>=1.9.0",
    "wget>=3.2",
    "numpy>=1.22.0",
    "tqdm>=4.63.0",
    "natsort>=8.0.0",
    "pymongo>=4.2",
    "pySmartDL>=1.3.4",
    "dnspython",
]

[project.urls]
"Research Page" = "https://phaseslab.com/sipfenn"
"Homepage" = "https://pysipfenn.org"
"Bug Tracker" = "https://github.com/PhasesResearchLab/pySIPFENN/issues"