[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pysipfenn"
version = "0.13.0"
authors = [
  { name="Adam Krajewski", email="ak@psu.edu" },
    { name="Jonathan Siegel", email="jwsiegel@tamu.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
description = "Easily extensible Python package for featurizing periodic atomic structures and running Structure-Informed Prediction of Formation Energy using Neural Networks (SIPFENN)"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "pymatgen>=2023.2.22",
    "torch>=1.11.0",
    "onnx2torch>=1.5.2",
    "onnx>=1.13.0",
    "numpy>=1.22.0",
    "tqdm>=4.65.0",
    "natsort>=8.3.0",
    "pymongo>=4.2",
    "pySmartDL>=1.3.4",
    "dnspython",
]

[project.optional-dependencies]
dev = [
    "coremltools>=6.3",
    "onnxconverter_common>=1.13.0",
    "onnxsim==0.4.33"
]

[project.urls]
"Research Page" = "https://phaseslab.com/sipfenn"
"Homepage" = "https://pysipfenn.org"
"Bug Tracker" = "https://github.com/PhasesResearchLab/pySIPFENN/issues"
