[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pysipfenn"
version = "0.15.1"
authors = [
  { name="Adam Krajewski", email="ak@psu.edu" },
    { name="Jonathan Siegel", email="jwsiegel@tamu.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
description = "Easily extensible Python package for featurizing periodic atomic structures and running Structure-Informed Prediction of Formation Energy using Neural Networks (SIPFENN)"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "pymatgen>=2024.2.20",
    "spglib==2.0.2",
    "torch>=2.1.0",
    "onnx2torch>=1.5.2",
    "onnx>=1.13.0",
    "numpy>=1.25.0",
    "tqdm>=4.65.0",
    "natsort>=8.3.0",
    "pymongo>=4.4",
    "pysmartdl2>=2.0.0",
    "dnspython",
    "ruamel.yaml",
    "colorama"
]

[project.optional-dependencies]
dev = [
    "coremltools>=7.0",
    "onnxconverter_common>=1.14.0",
    "onnxsim==0.4.33",
    "onnxruntime>=1.16.0"
]

[project.urls]
"Research Page" = "https://phaseslab.com/sipfenn"
"Homepage" = "https://pysipfenn.org"
"Bug Tracker" = "https://github.com/PhasesResearchLab/pySIPFENN/issues"
